--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -12,7 +12,6 @@
   z-index: 1;
   background-size: cover;
   overflow-y: scroll;
-
   header {
     display: flex;
     flex-direction: column;
@@ -32,16 +31,16 @@
       -moz-background-clip: text;
       background-clip: text;
       text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
-      padding-left: 10px;
+      padding-left: 10vmin;
     }
     h2 {
-      padding-left: 10px;
+      padding-left: 10vmin;
     }
     h3 {
-      padding-left: 10px;
+      padding-left: 10vmin;
     }
     h4 {
-      padding-left: 10px;
+      padding-left: 10vmin;
     }
     section {
       top: 40vh;
@@ -80,39 +79,31 @@
       }
     }
   }
-  ul {
-    top: 50vh;
-    background-color: lightgrey;
+  .postsList {
+    top: 55vh;
+
     animation: fadeIn 2s;
     list-style-type: none;
     position: absolute;
     // overflow-y: scroll;
     // height: 80vh;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-      rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+
     border-radius: 7px;
-    display: flex;
     flex-direction: column;
     width: 70vw;
     border: solid 1px;
-    align-items: center;
-    left: 3.5vw;
+    left: 5vw;
     margin-left: 10vw;
-
-    li {
+    border: none;
+    .post {
       background-color: white;
       padding-right: 40px;
-      box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
-        rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px,
-        rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+      box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+        rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+        rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
       height: 80vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
       margin-bottom: 15px;
-      align-items: center;
-      width: 65vw;
-      border: solid 2px black;
+      border-radius: 7px;
       li:hover {
         padding: 20px;
         transition: 3s;
@@ -123,8 +114,9 @@
         justify-content: space-between;
 
         height: 10vh;
-        width: 65vw;
+        width: 70vw;
         align-items: center;
+
         h1 {
           color: rgb(171, 211, 246);
           padding-right: 10px;
@@ -136,65 +128,77 @@
       .postImage {
         overflow: hidden;
         background-size: contain;
-        width: 65vw;
-        height: 80vh;
-        border-radius: 6px;
+        width: 70vw;
+        height: 60vh;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-left: 2vw;
+        margin-right: 0;
       }
-      h3 {
-        margin-left: 2vw;
+      .postText {
         margin-top: 0;
-        height: 50vh;
-        width: 55vw;
         display: flex;
         justify-content: center;
         align-items: center;
         background-color: gray;
-        border-radius: 7px;
         color: white;
         font-size: 10vmin;
         overflow: hidden;
+        height: 60vh;
+        width: 70vw;
+        margin: 0;
+        margin-right: 0;
       }
-
       aside {
         display: flex;
         width: 65vw;
         justify-content: flex-start;
-        p {
-          margin-left: 5px;
-          margin-right: 5px;
-        }
-        .like:hover,
-        .dislike:hover,
-        .comment:hover {
-          color: rgb(171, 211, 246);
-        }
+        height: 10vh;
+
+        flex-direction: column;
+
         .pDiv {
-          margin-top: 5px;
           display: flex;
+          border-top: solid 1px black;
+          width: 68vw;
           p {
-            margin-left: 5px;
-            margin-right: 5px;
+            width: 25%;
             height: 2.5vh;
+            margin-top: 0;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            padding-left: 2px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
           }
-        }
-        .likes:hover,
-        .dislikes:hover,
-        .comment:hover {
-          color: rgb(171, 211, 246);
-          cursor: pointer;
+          p:hover {
+            background-color: rgb(180, 217, 247);
+            border-radius: 7px;
+            color: white;
+            cursor: pointer;
+          }
+          .date {
+            width: 20%;
+            display: flex;
+            justify-content: flex-end;
+            font-weight: bolder;
+          }
+          .date:hover {
+            background-color: white;
+            color: black;
+          }
         }
         footer {
           align-self: center;
           border-radius: 7px;
           padding: 2.5px;
-          border: solid 1px black;
-          width: 75vw;
+          border: none;
+          width: 50vw;
           height: 5vh;
           box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+          color: black;
         }
       }
     }
@@ -262,71 +266,72 @@
 @media (prefers-color-scheme: dark) {
   .ForumPage {
     header {
-      //box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-      color: #ff6410;
       h1 {
         color: #ff6410;
+        text-shadow: none;
       }
       h2,
-      h3 {
+      h3,
+      h4 {
         color: white;
       }
-
       section {
-        background-color: lightgray;
-        button {
+        aside {
           background-color: #ff6410;
-          border-radius: 7px;
-          padding: 2px;
+          border: solid 1px white;
+          button {
+            background-color: rgb(28, 28, 28);
+          }
+          button:hover {
+            background-color: #ff6410;
+          }
         }
       }
     }
-    ul {
-      z-index: -1;
-      li {
+    .postsList {
+      background-color: rgb(28, 28, 28);
+      .post:hover {
+        cursor: pointer;
+      }
+      .post {
+        border: solid 1px white;
         background-color: rgb(28, 28, 28);
-      }
-      li:hover {
-      }
-      section {
-        width: 85vw;
-        h1 {
+
+        section {
+          h1 {
+          }
+          h2 {
+          }
         }
-        h2 {
+        .postImage {
         }
-      }
-      h3 {
+        .postText {
+        }
         aside {
           p {
           }
-          .like:hover,
-          .dislike:hover,
-          .comment:hover {
-            color: #ff6410;
+          .pDiv {
+            p {
+            }
+            p:hover {
+              background-color: #ff6410;
+            }
+            .date {
+            }
+            .date:hover {
+              background-color: rgb(28, 28, 28);
+              color: white;
+            }
+          }
+          footer {
           }
         }
       }
     }
-    .postToForum {
-      p {
-      }
-      form {
-        background-color: rgb(28, 28, 28);
-        color: white;
-        border: solid 2px white;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-          rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
-        h1 {
-        }
-        h2 {
-        }
-
-        input {
-        }
-        button {
-        }
-      }
+    .noPosts {
+      margin-top: 10vh;
+      font-size: 25px;
+      color: black;
     }
   }
 }
