--- a/src/pages/UserFriends/UserFriends.module.scss
+++ b/src/pages/UserFriends/UserFriends.module.scss
@@ -1,44 +1,52 @@
-.UserFriends{
-    position: fixed;
-    top:30px;
+.UserFriends {
+  position: fixed;
+  top: 30px;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h1 {
     width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    h1{
-        width: 100vw;
-        margin-left: 60px;
-        color: rgb(180,218,247);
+    margin-left: 60px;
+    color: rgb(180, 218, 247);
+  }
+  ul {
+    overflow-y: scroll;
+    width: 70vw;
+    left: 15vw;
+    li {
+      display: flex;
+      justify-content: space-around;
+      flex-direction: row;
+      width: 70vw;
+      img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+          rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+          rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+      }
+      .friendName {
+        width: 33%;
+        color: black;
+      }
+      button {
+        border-radius: 7px;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px,
+          rgba(0, 0, 0, 0.3) 0px 3px 7px -1px,
+          rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+        background-color: white;
+        padding: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+      }
+      button:hover {
+        background-color: rgb(180, 218, 247);
+        color: white;
+      }
     }
-    ul{
-        overflow-y: scroll;
-        width: 70vw;
-        left: 15vw;
-        li{
-            display: flex;
-            justify-content: space-around;
-            flex-direction: row;
-            width: 70vw;
-            img{
-                width: 100px;
-                height: 100px;
-                border-radius: 50%;
-            }
-            .friendName{
-                width: 33%;
-                color: black;
-
-            }
-            button{
-                border-radius: 7px;
-                padding: 3px;
-                background-color: white;
-                border: solid 1px black;
-            }
-            button:hover{
-                background-color: rgb(180,218,247);
-                color: white;
-            }
-        }
-    }
+  }
 }
