--- a/src/pages/UserFriends/UserFriends.module.scss
+++ b/src/pages/UserFriends/UserFriends.module.scss
@@ -10,15 +10,21 @@
     margin-left: 60px;
     color: rgb(180, 218, 247);
   }
-  ul {
-    overflow-y: scroll;
+  .friendsList {
     width: 70vw;
     left: 15vw;
-    li {
+    .friendCard {
       display: flex;
       justify-content: space-around;
       flex-direction: row;
+      align-items: center;
+      border-radius: 7px;
       width: 70vw;
+      height: 20vh;
+      margin: 15px;
+      box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -1px,
+        rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
       img {
         width: 100px;
         height: 100px;
@@ -26,6 +32,9 @@
         box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
           rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
           rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+      }
+      img:hover {
+        cursor: pointer;
       }
       .friendName {
         width: 33%;
@@ -46,6 +55,33 @@
       button:hover {
         background-color: rgb(180, 218, 247);
         color: white;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .UserFriends {
+    h1 {
+      color: #ff6410;
+    }
+    .friendsList {
+      .friendCard {
+        background-color: rgb(28, 28, 28);
+        img {
+        }
+        .friendName {
+          color: #ff6410;
+        }
+        button {
+          background-color: black;
+          border: solid 1px white;
+        }
+        button:hover {
+          background-color: #ff6410;
+          cursor: pointer;
+        }
       }
     }
   }
