--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -36,12 +36,8 @@
     background-color: black;
 
     .heading {
-      color: transparent;
-      background: #ff6410;
-      -webkit-background-clip: text;
-      -moz-background-clip: text;
-      background-clip: text;
-      text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
+      color: #ff6410;
+      text-shadow: none;
     }
   }
 }
