--- a/src/components/PostModal/PostModal.module.scss
+++ b/src/components/PostModal/PostModal.module.scss
@@ -22,6 +22,30 @@
     height: 80vh;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
       rgba(0, 0, 0, 0.05) 0px 5px 10px;
+    header {
+      display: flex;
+      flex-direction: row;
+      width: 55vw;
+      height: 5vh;
+      align-items: center;
+      margin-top: -100px;
+      border-top: solid 1px black;
+      h5 {
+        font-weight: light;
+        padding-right: 10px;
+        padding-left: 10px;
+        background-color: gray;
+        border-radius: 7px;
+        margin-left: 1vw;
+        margin-right: 1vw;
+        color: white;
+      }
+      h5:hover {
+        background-color: rgb(180, 217, 247);
+        color: white;
+        cursor: pointer;
+      }
+    }
     .forumList {
       width: 45vw;
       height: 3vh;
@@ -89,10 +113,10 @@
         width: 20vw;
       }
       .line {
-        margin: 5vh;
+        margin: 10vh;
         width: 60vw;
         border-radius: 7px;
-        background-color: black;
+
         height: 1px;
       }
       button {
