--- a/src/pages/OtherUserPage/OtherUserPage.module.scss
+++ b/src/pages/OtherUserPage/OtherUserPage.module.scss
@@ -7,6 +7,10 @@
   justify-content: center;
   align-items: flex-start;
 
+  .wrong {
+    height: 100vh;
+    width: 100vw;
+  }
   section {
     width: 80vw;
     margin-top: 5vh;
