fixed OtherUserPage adding or removing friends bugs now the realtime messaging is not workinggggggggggg again

--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -141,6 +141,11 @@
       }
     }
   }
+  footer {
+    width: 100vw;
+    background-color: pink;
+    position: relative;
+  }
 }
 
 @keyframes fadeIn {
