--- a/src/components/PostModal/PostModal.module.scss
+++ b/src/components/PostModal/PostModal.module.scss
@@ -87,6 +87,9 @@
         font-size: 25px;
         padding-left: 30px;
       }
+      p:hover {
+        cursor: pointer;
+      }
       h1 {
         display: flex;
         justify-content: center;
