--- a/src/pages/UserSettings/UserSettings.module.scss
+++ b/src/pages/UserSettings/UserSettings.module.scss
@@ -1,49 +1,76 @@
 .UserSettings {
   position: absolute;
-  top: 30px;
+  top: 33px;
   width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  flex-direction: column;
-  h1 {
-    width: 100vw;
-    padding-left: 10vw;
-    margin-top: 10vh;
-    color: rgb(180, 217, 247);
-  }
-  form {
-    width: 30vw;
-    height: 60vh;
+  flex-direction: row;
+  section {
+    width: 25vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-
+    align-items: flex-start;
+    border-right: solid 1px rgb(180, 217, 247);
     label {
-      align-self: flex-start;
       font-size: 25px;
+
+      margin: 30px;
     }
-    input {
-      width: 30vw;
-      border-radius: 7px;
-      border: solid 1px;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-      border: solid 1px white;
-      padding: 5px;
+    label:hover {
+      cursor: pointer;
+      color: rgb(180, 217, 247);
     }
-    section {
-      .bioInput {
-        height: 10vh;
+    h1 {
+      display: flex;
+      justify-content: flex-start;
+      width: 100%;
+      margin-top: 10vh;
+      color: rgb(180, 217, 247);
+      font-size: 35px;
+      padding-left: 40px;
+    }
+  }
+  aside {
+    display: flex;
+    justify-content: center;
+    width: 75vw;
+    height: 50vh;
+    form {
+      width: 40vw;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      label {
+        font-size: 30px;
+        margin: 5px;
       }
-      button {
-        background-color: rgb(180, 217, 247);
-        color: white;
-        border: solid 1px white;
+      input {
+        margin: 5px;
         padding: 5px;
         border-radius: 7px;
-        margin-top: 5px;
-        margin-bottom: 5px;
+        border: none;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+          rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+      }
+      button {
+        margin-left: 5px;
+        width: 15vw;
+        border-radius: 7px;
+        border: none;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px,
+          rgba(0, 0, 0, 0.3) 0px 3px 7px -1px,
+          rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+      }
+      button:hover {
+        color: white;
+        background-color: rgb(180, 217, 247);
+        cursor: pointer;
+      }
+      #bio {
+        padding-bottom: 100px;
       }
     }
   }
