--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -127,7 +127,6 @@
 
       width: 10vw;
       height: 30vh;
-
       li {
         display: flex;
         justify-content: center;
@@ -135,7 +134,10 @@
         color: black;
         width: 8vw;
         height: 10vh;
-        margin-left: 2vw;
+        margin-left: 2.5vw;
+      }
+      li:hover {
+        cursor: pointer;
       }
       .forumTitles {
       }
@@ -296,7 +298,6 @@
         li {
         }
         .forumTitles {
-          color: white;
         }
       }
     }
