--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -1,9 +1,8 @@
 ul {
   position: absolute;
   top: 15vmin;
-  width: 55vw;
-  border-radius: 7px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+  width: 65vw;
+  box-shadow: rgba(105, 105, 107, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
   overflow-x: hidden;
   display: flex;
@@ -14,7 +13,9 @@ ul {
   animation: fadeIn 0.5s;
   height: 80vh;
   overflow-y: scroll;
-  left: 20vw;
+  left: 17vw;
+  border-radius: 0px;
+
   li {
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
@@ -23,20 +24,19 @@ ul {
     height: 70vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    margin-bottom: 7.5px;
-    margin-top: 7.5px;
     align-items: center;
-    width: 55vw;
     border-radius: 7px;
     margin-right: 30px;
     border: solid white;
+    width: 65vw;
+
     section {
       display: flex;
       justify-content: space-between;
-      height: 10vh;
-      width: 55vw;
+      height: 5vh;
+      width: 65vw;
       align-items: center;
+
       h1 {
         padding-right: 10px;
         color: transparent;
@@ -67,20 +67,20 @@ ul {
     }
     h3 {
       margin-top: 0;
-      height: 100%;
-      width: 54vw;
+      width: 65vw;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      justify-content: flex-start;
       background-color: gray;
       border: solid 2px white;
-      border-radius: 7px;
       font-size: 10vmin;
       overflow: hidden;
+      border-radius: 0px;
+      height: 60vh;
     }
     .postImage {
-      width: 55vw;
-      height: 100%;
+      margin-top: 0;
+      width: 65vw;
+      height: 60vh;
     }
     .postImage:hover {
       cursor: pointer;
@@ -90,24 +90,25 @@ ul {
       border-radius: 7px;
       cursor: pointer;
     }
-    aside {
+    .bottomSection {
+      height: 5vh;
       display: flex;
-      width: 55vw;
-      justify-content: flex-start;
       flex-direction: column;
-      align-items: flex-start;
-      margin-top: 0;
-      height: 15vh;
+      align-items: center;
       .pDiv {
         display: flex;
+        justify-content: space-between;
+        align-items: center;
         border-top: solid 1px black;
-        width: 55vw;
+        margin-top: -10vh;
+        width: 65vw;
+        height: 5vh;
         p {
-          margin-left: 5px;
-          margin-right: 5px;
-          margin-top: 0;
+          display: flex;
+          justify-content: flex-start;
+          padding-right: 20px;
           height: 100%;
-          width: 25%;
+          height: 5vh;
         }
         p:hover {
           color: white;
@@ -116,6 +117,7 @@ ul {
           display: flex;
           justify-content: flex-end;
           font-weight: bolder;
+          align-self: center;
         }
         .date:hover,
         .comment:hover {
@@ -139,13 +141,14 @@ ul {
       }
       footer {
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         border: solid 1px white;
         align-self: center;
         border-radius: 7px;
         padding: 2.5px;
-        width: 50vw;
-        border-radius: 7px;
+        width: 60vw;
+        height: 5vh;
+        border-radius: 3px;
         margin-top: 10px;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       }
@@ -172,47 +175,17 @@ ul {
   }
 }
 
-@media (max-width: 900px) {
-  ul {
-    li {
-      section {
-        h1 {
-        }
-        h2 {
-        }
-        .forumTitle {
-        }
-      }
-      h3 {
-      }
-      .postImage {
-      }
-      .postImage:hover {
-      }
-      h3:hover {
-      }
-      aside {
-        .pDiv {
-          p {
-          }
-        }
-        .likes:hover,
-        .dislikes:hover,
-        .comment:hover {
-        }
-        footer {
-        }
-      }
-      li:hover {
-      }
-    }
-  }
-}
 @media (prefers-color-scheme: dark) {
   ul {
+    left: 18vw;
+    width: 61vw;
+    overflow-y: visible;
     li {
       background-color: rgb(28, 28, 28);
+      border: none;
+      width: 61vw;
       section {
+        width: 61vw;
         h1 {
           text-shadow: none;
           color: #ff6410;
@@ -226,8 +199,93 @@ ul {
         }
       }
       h3 {
+        border: none;
+        width: 61vw;
       }
       .postImage {
+        width: 61vw;
+      }
+      .postImage:hover {
+        cursor: pointer;
+      }
+      h3:hover {
+      }
+      .bottomSection {
+        .pDiv {
+          width: 60vw;
+          p {
+          }
+          p:hover {
+            color: white;
+            background-color: #ff6410;
+          }
+          .date {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+          }
+          .likes,
+          .dislikes,
+          .comment {
+          }
+          .likes:hover,
+          .dislikes:hover,
+          .comment:hover {
+            cursor: pointer;
+            background-color: #ff6410;
+            border-radius: 7px;
+            color: white;
+          }
+          .date:hover {
+            background-color: rgb(28, 28, 28);
+            color: white;
+          }
+        }
+        footer {
+          width: 55vw;
+        }
+        footer:hover {
+          background-color: #ff6410;
+          color: white;
+        }
+      }
+    }
+    li:hover {
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  ul {
+    top: 5vh;
+    width: 90vw;
+    left: 0;
+    height: 100vh;
+    li {
+      border: none;
+      border-radius: 0px;
+      width: 95vw;
+      margin-right: 10vw;
+
+      section {
+        width: 95vw;
+        h1 {
+        }
+        h2 {
+          padding-left: 10px;
+        }
+        .forumTitle {
+          text-shadow: none;
+          color: white;
+        }
+      }
+      h3 {
+        border: none;
+        width: 95vw;
+        height: 60vh;
+      }
+      .postImage {
+        width: 95vw;
       }
       .postImage:hover {
         cursor: pointer;
@@ -235,8 +293,11 @@ ul {
       h3:hover {
       }
       aside {
+        width: 98vw;
+        margin-top: 0;
         border-top: solid 1px white;
         .pDiv {
+          width: 98vw;
           p {
           }
           p:hover {
@@ -263,6 +324,7 @@ ul {
           }
         }
         footer {
+          width: 90vw;
         }
         footer:hover {
           background-color: #ff6410;
