--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -12,7 +12,7 @@ ul {
   list-style-type: none;
   animation: fadeIn 0.5s;
   height: 80vh;
-  overflow-y: scroll;
+  overflow-y: visible;
   left: 17vw;
   border-radius: 0px;
 
