--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -18,11 +18,12 @@
 
   width: 100vw;
 
-  background: rgb(180, 217, 247);
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  background-clip: text;
-  text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
+  // background: rgb(180, 217, 247);
+  // -webkit-background-clip: text;
+  // -moz-background-clip: text;
+  // background-clip: text;
+  // text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
+  background-color: white;
   .Name {
     color: transparent;
     background: rgb(180, 217, 247);
